fix(console): detail top card spacing

--- a/packages/console/src/pages/ApiResourceDetails/index.module.scss
+++ b/packages/console/src/pages/ApiResourceDetails/index.module.scss
@@ -28,7 +28,7 @@
       }
 
       .copy {
-        padding: _.unit(1) _.unit(2) _.unit(1) _.unit(2);
+        padding: _.unit(1) _.unit(2);
       }
     }
   }
