--- a/packages/console/src/pages/UserDetails/index.module.scss
+++ b/packages/console/src/pages/UserDetails/index.module.scss
@@ -51,7 +51,7 @@
     }
 
     .copy {
-      padding: _.unit(1) _.unit(2) _.unit(1) _.unit(2);
+      padding: _.unit(1) _.unit(2);
     }
   }
 }
